--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 data/
-models/
+models/history/*.pkl
+models/weights/*.h5
 
 !data/.gitkeep
-!models/history/.gitkeep
-!models/weights/.gitkeep
 
 .ipynb_checkpoints
 __pycache__
